# python-project-52

./: Makefile  README.md  database.sql  db.sqlite3  pyproject.toml
main/: urls.py  views.py
main/migrations/: 0001_initial.py  0002_delete_user.py
main/templates/main/: index.html  layout.html
render/: views.py
render/templates/: index.html
task_manager/: settings.py  urls.py
task_manager/fixtures/: label.json  status.json  task.json
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: users.html
